<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.DescriptionActivity">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/orange_200"
        android:minHeight="?attr/actionBarSize"
        android:theme="@style/ThemeOverlay.AppCompat.Dark"/>

    <LinearLayout
        android:id="@+id/llContent"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:orientation="horizontal"
        android:weightSum="6"
        android:layout_marginVertical="20dp"
        android:layout_marginHorizontal="10dp"
        android:layout_below="@+id/toolbar"
        android:background="@drawable/card_bg2">

        <ImageView
            android:id="@+id/imgBioImage"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.5"
            android:layout_margin="5dp"
            android:scaleType="centerCrop"
            android:contentDescription="@string/desc_img" />

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="4.5"
            android:layout_marginStart="15dp"
            android:layout_marginVertical="10dp"
            android:gravity="center">

            <TextView
                android:id="@+id/descBioName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="4dp"
                android:text="@string/name_of_the_bio"
                android:textColor="#14213D"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/descBioBirthDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="4dp"
                android:text="@string/date_of_birth"
                android:textColor="#14213D"
                android:textSize="13sp"
                android:layout_below="@+id/descBioName"/>

        </RelativeLayout>

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/llContent"
        android:layout_marginHorizontal="5dp"
        android:layout_marginBottom="10dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/txtAboutTheBio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="4dp"
                    android:padding="6dp"
                    android:text="@string/about"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:textColor="#E5E5E5"/>

                <TextView
                    android:id="@+id/txtBioDesc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/hello_description"
                    android:padding="6dp"
                    android:textColor="#000000"
                    android:textSize="18sp"
                    android:textAlignment="textStart"
                    android:layout_below="@+id/txtAboutTheBio"/>


        </RelativeLayout>

    </ScrollView>

    <RelativeLayout
        android:id="@+id/progressLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        android:background="#ffffff">

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"/>

    </RelativeLayout>

</RelativeLayout>